anpr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anpr-cloud
  labels:
    app: anpr-cloud
spec:
  type: ClusterIP
  selector:
    app: anpr-cloud
  ports:
    - name: http
      port: 80
      targetPort: http
