anpr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anpr-cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "12m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - anpr.jshipster.io
      secretName: anpr-cloud-tls
  rules:
    - host: anpr.jshipster.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anpr-cloud
                port:
                  number: 80
